# SimpleSATSolver

./: CMakeLists.txt  Readme.md  multiple_sources.cfg
src/: CMakeLists.txt  benchmark_reader.cpp  benchmark_reader.h  conjunction_clause.cpp  conjunction_clause.h  debug.h  directed_edge.h  disjunction_clause.cpp  disjunction_clause.h  edge.h  heuristic.h  implication_graph.cpp  implication_graph.h  implication_graph_test.cpp  literal.cpp  literal.h  main  main.cpp  node.cpp  node.h  solver.cpp  solver.h  solver_exception.h  test  variable.cpp  variable.h  version.h
